--- a/create.html
+++ b/create.html
@@ -5,9 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <script src="./src/js/components/nav.js" defer></script>
     <script type="module" src="./src/js/pages/create/index.js"></script>
   </head>
   <body>
+    <header class="sticky left-0 top-0 z-20 bg-neutral-50 md:static">
+      <div class="mx-auto max-w-6xl">
+        <div class="flex min-h-[4rem] justify-between md:justify-normal">
+          <div class="flex items-center">
+            <a href="./index.html" class="px-3 py-2 font-bold">SWIFTLY</a>
+          </div>
+          <div class="flex items-center md:hidden">
+            <button
+              class="px-3 py-2"
+              id="navigation-button"
+              aria-controls="primary-navigation"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Menu</span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3.75 9h16.5m-16.5 6.75h16.5"
+                />
+              </svg>
+            </button>
+          </div>
+          <div
+            class="absolute left-0 top-16 hidden h-screen w-full items-center bg-neutral-50 md:static md:flex md:h-auto md:justify-between"
+            id="navigation-menu"
+          >
+            <div class="flex flex-col md:flex-row" id="primary-navigation">
+              <a
+                href="./index.html"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
+                >Home</a
+              >
+              <a
+                href="./explore.html"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
+                >Explore</a
+              >
+            </div>
+            <div class="flex flex-col md:flex-row" id="secondary-navigation">
+              <a
+                href="./login.html"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
+                >Log in</a
+              >
+              <a
+                href="./signup.html"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
+                >Sign up</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
       <section id="create-section">
         <div class="mx-auto max-w-6xl">
@@ -71,107 +134,6 @@
                   <div class="hidden" id="create-description-error"></div>
                 </div>
 
-                <!-- duration -->
-                <fieldset class="flex flex-col gap-2" id="create-duration">
-                  <div>
-                    <legend>Duration</legend>
-                  </div>
-
-                  <div class="grid grid-cols-3 gap-2">
-                    <div>
-                      <input
-                        type="radio"
-                        name="create-duration"
-                        id="duration-1"
-                        value="6"
-                        class="peer/option-1 hidden"
-                      />
-                      <label
-                        for="duration-1"
-                        class="block rounded-md border border-neutral-300 px-3 py-2 text-center placeholder:text-neutral-600 peer-checked/option-1:border-black"
-                        >6 Hours</label
-                      >
-                    </div>
-
-                    <div>
-                      <input
-                        type="radio"
-                        name="create-duration"
-                        id="duration-2"
-                        value="12"
-                        class="peer/option-2 hidden"
-                      />
-                      <label
-                        for="duration-2"
-                        class="block rounded-md border border-neutral-300 px-3 py-2 text-center placeholder:text-neutral-600 peer-checked/option-2:border-black"
-                        >12 Hours</label
-                      >
-                    </div>
-
-                    <div>
-                      <input
-                        type="radio"
-                        name="create-duration"
-                        id="duration-3"
-                        value="24"
-                        class="peer/option-3 hidden"
-                      />
-                      <label
-                        for="duration-3"
-                        class="block rounded-md border border-neutral-300 px-3 py-2 text-center placeholder:text-neutral-600 peer-checked/option-3:border-black"
-                        >1 Day</label
-                      >
-                    </div>
-
-                    <div>
-                      <input
-                        type="radio"
-                        name="create-duration"
-                        id="duration-4"
-                        value="48"
-                        class="peer/option-4 hidden"
-                      />
-                      <label
-                        for="duration-4"
-                        class="block rounded-md border border-neutral-300 px-3 py-2 text-center placeholder:text-neutral-600 peer-checked/option-4:border-black"
-                        >2 Days</label
-                      >
-                    </div>
-
-                    <div>
-                      <input
-                        type="radio"
-                        name="create-duration"
-                        id="duration-5"
-                        value="168"
-                        class="peer/option-5 hidden"
-                      />
-                      <label
-                        for="duration-5"
-                        class="block rounded-md border border-neutral-300 px-3 py-2 text-center placeholder:text-neutral-600 peer-checked/option-5:border-black"
-                        >1 Week</label
-                      >
-                    </div>
-
-                    <div>
-                      <input
-                        type="radio"
-                        name="create-duration"
-                        id="duration-6"
-                        value="336"
-                        class="peer/option-6 hidden"
-                      />
-                      <label
-                        for="duration-6"
-                        class="block rounded-md border border-neutral-300 px-3 py-2 text-center placeholder:text-neutral-600 peer-checked/option-6:border-black"
-                        >2 Weeks</label
-                      >
-                    </div>
-                  </div>
-
-                  <div class="hidden" id="create-ending-error"></div>
-                </fieldset>
-
                 <!-- tags -->
                 <div class="flex flex-col gap-2">
                   <label for="create-tags"
@@ -188,23 +150,117 @@
                   />
                   <div class="hidden" id="create-tags-error"></div>
                 </div>
+
+                <!-- duration -->
+                <fieldset class="flex flex-col gap-2" id="create-duration">
+                  <div>
+                    <legend>Duration</legend>
+                  </div>
+
+                  <div class="grid grid-cols-3 gap-2">
+                    <div>
+                      <input
+                        type="radio"
+                        name="create-duration"
+                        id="duration-1"
+                        value="6"
+                        class="peer/option-1 absolute -z-10 opacity-0"
+                      />
+                      <label
+                        for="duration-1"
+                        class="block cursor-pointer rounded-md border border-neutral-300 px-3 py-2 text-center text-neutral-600 outline-black peer-checked/option-1:border-neutral-900 peer-checked/option-1:text-black peer-focus/option-1:outline peer-focus/option-1:outline-2"
+                        >6 Hours</label
+                      >
+                    </div>
+
+                    <div>
+                      <input
+                        type="radio"
+                        name="create-duration"
+                        id="duration-2"
+                        value="12"
+                        class="peer/option-2 absolute -z-10 opacity-0"
+                      />
+                      <label
+                        for="duration-2"
+                        class="block cursor-pointer rounded-md border border-neutral-300 px-3 py-2 text-center text-neutral-600 outline-black peer-checked/option-2:border-neutral-900 peer-checked/option-2:text-black peer-focus/option-2:outline peer-focus/option-2:outline-2"
+                        >12 Hours</label
+                      >
+                    </div>
+
+                    <div>
+                      <input
+                        type="radio"
+                        name="create-duration"
+                        id="duration-3"
+                        value="24"
+                        class="peer/option-3 absolute -z-10 opacity-0"
+                      />
+                      <label
+                        for="duration-3"
+                        class="block cursor-pointer rounded-md border border-neutral-300 px-3 py-2 text-center text-neutral-600 outline-black peer-checked/option-3:border-neutral-900 peer-checked/option-3:text-black peer-focus/option-3:outline peer-focus/option-3:outline-2"
+                        >1 Day</label
+                      >
+                    </div>
+
+                    <div>
+                      <input
+                        type="radio"
+                        name="create-duration"
+                        id="duration-4"
+                        value="48"
+                        class="peer/option-4 absolute -z-10 opacity-0"
+                      />
+                      <label
+                        for="duration-4"
+                        class="block cursor-pointer rounded-md border border-neutral-300 px-3 py-2 text-center text-neutral-600 outline-black peer-checked/option-4:border-neutral-900 peer-checked/option-4:text-black peer-focus/option-4:outline peer-focus/option-4:outline-2"
+                        >2 Days</label
+                      >
+                    </div>
+
+                    <div>
+                      <input
+                        type="radio"
+                        name="create-duration"
+                        id="duration-5"
+                        value="168"
+                        class="peer/option-5 absolute -z-10 opacity-0"
+                      />
+                      <label
+                        for="duration-5"
+                        class="block cursor-pointer rounded-md border border-neutral-300 px-3 py-2 text-center text-neutral-600 outline-black peer-checked/option-5:border-neutral-900 peer-checked/option-5:text-black peer-focus/option-5:outline peer-focus/option-5:outline-2"
+                        >1 Week</label
+                      >
+                    </div>
+
+                    <div>
+                      <input
+                        type="radio"
+                        name="create-duration"
+                        id="duration-6"
+                        value="336"
+                        class="peer/option-6 absolute -z-10 opacity-0"
+                      />
+                      <label
+                        for="duration-6"
+                        class="block cursor-pointer rounded-md border border-neutral-300 px-3 py-2 text-center text-neutral-600 outline-black peer-checked/option-6:border-neutral-900 peer-checked/option-6:text-black peer-focus/option-6:outline peer-focus/option-6:outline-2"
+                        >2 Weeks</label
+                      >
+                    </div>
+                  </div>
+
+                  <div class="hidden" id="create-ending-error"></div>
+                </fieldset>
               </div>
 
               <!-- bottom buttons -->
               <div class="sm:col-span-2">
                 <div class="flex justify-end gap-3">
                   <button
-                    class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white sm:w-fit"
+                    class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600 sm:w-fit"
                     id="create-button"
                   >
                     Create listing
-                  </button>
-
-                  <button
-                    class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
-                    id=""
-                  >
-                    Cancel
                   </button>
                 </div>
               </div>
