--- a/create.html
+++ b/create.html
@@ -87,7 +87,7 @@
     <main>
       <section id="create-section">
         <div class="mx-auto max-w-6xl">
-          <div class="flex flex-col gap-3 px-3 py-5">
+          <div class="my-5 flex flex-col gap-3 px-3">
             <!-- <div class="grid auto-rows-fr gap-3 sm:grid-cols-2"> -->
             <h2 class="text-2xl font-bold">Create listing</h2>
             <form class="grid gap-5 sm:grid-cols-2">
