--- a/explore.html
+++ b/explore.html
@@ -127,7 +127,7 @@
       </section>
       <section id="explore-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
-          <div class="flex flex-col gap-3 px-3 py-5">
+          <div class="my-5 flex flex-col gap-3 px-3">
             <div
               class="grid auto-rows-fr gap-3 sm:grid-cols-2 lg:grid-cols-3"
               id="listings-container"
@@ -338,7 +338,7 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-row gap-3 px-3 py-5" id="pagination-container">
+          <div class="my-5 flex flex-row gap-3 px-3" id="pagination-container">
             <button
               class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
               id="prev-button"
