--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </section>
       <section id="hero-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
-          <div class="flex h-[50vh] max-h-[40rem] min-h-[30rem] px-3 py-5">
+          <div class="my-5 flex h-[50vh] max-h-[40rem] min-h-[30rem] px-3">
             <div
               class="flex h-full w-full flex-col items-center justify-center gap-5"
               id="hero-container"
@@ -159,7 +159,7 @@
       </section>
       <section id="explore-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
-          <div class="flex flex-col gap-3 px-3 py-5">
+          <div class="my-5 flex flex-col gap-3 px-3">
             <h2 class="text-2xl font-bold">Newest</h2>
             <div
               class="grid auto-rows-fr gap-3 sm:grid-cols-2 lg:grid-cols-3"
