--- a/listing.html
+++ b/listing.html
@@ -84,7 +84,7 @@
     <main>
       <section id="listing-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
-          <div class="flex flex-col gap-3 px-3 py-5">
+          <div class="my-5 flex flex-col gap-3 px-3">
             <div
               class="grid gap-3 md:grid-cols-[6fr_5fr]"
               id="listing-container"
