--- a/profile.html
+++ b/profile.html
@@ -84,7 +84,7 @@
     <main>
       <section id="profile-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
-          <div class="flex flex-col px-3 py-5">
+          <div class="my-5 flex flex-col px-3">
             <div
               class="flex h-full w-full flex-col gap-3 rounded-md bg-neutral-50 p-3 md:flex-row"
               id="profile-container"
@@ -121,7 +121,7 @@
       </section>
       <section id="listings-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
-          <div class="flex flex-col gap-3 px-3 py-5">
+          <div class="my-5 flex flex-col gap-3 px-3">
             <div
               class="grid auto-rows-fr gap-3 sm:grid-cols-2 lg:grid-cols-3"
               id="listings-container"
@@ -230,7 +230,7 @@
               </div>
             </div>
             <div
-              class="flex flex-row justify-center gap-3 px-3 py-5"
+              class="my-5 flex flex-row justify-center gap-3 px-3"
               id="pagination-container"
             >
               <button
