--- a/profile.html
+++ b/profile.html
@@ -137,8 +137,19 @@
                     <div
                       class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
                     <div
-                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
                   </div>
                 </div>
@@ -154,8 +165,19 @@
                     <div
                       class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
                     <div
-                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
                   </div>
                 </div>
@@ -171,8 +193,19 @@
                     <div
                       class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
                     <div
-                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
                   </div>
                 </div>
@@ -188,8 +221,19 @@
                     <div
                       class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
                     <div
-                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
                   </div>
                 </div>
@@ -205,8 +249,19 @@
                     <div
                       class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
                     <div
-                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
                   </div>
                 </div>
@@ -222,8 +277,19 @@
                     <div
                       class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
                     <div
-                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
                   </div>
                 </div>
